# physx-static

./: CMakeLists.txt  README.md
lib/checked/: PhysXCharacterKinematic_static_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXVehicle2_static_64.lib
lib/debug/: PhysXCharacterKinematic_static_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib  PhysXVehicle2_static_64.lib
lib/profile/: PhysXCharacterKinematic_static_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXVehicle2_static_64.lib
lib/release/: PhysXCharacterKinematic_static_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXVehicle2_static_64.lib
